# codecov-mcp

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: coverage.yml
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
src/codecov_client/: commits.rs  compare.rs  file_report.rs  mod.rs  pulls.rs
src/heuristics/: filters.rs  mod.rs  ranking.rs
src/models/: commit.rs  comparison.rs  error.rs  file.rs  mod.rs  pull.rs
src/resources/: mod.rs  pr_summary.rs
src/tools/: changed_files.rs  commit.rs  mod.rs  suggest.rs
tests/: integration_test.rs
tests/fixtures/: commit_detail_complete.json  commit_detail_pending.json  commit_report.json  comparison_summary.json  impacted_files_pending.json  impacted_files_processed.json
